--- a/src/index.css
+++ b/src/index.css
@@ -226,6 +226,9 @@ table.editproject {
 
 /****************************** END EDIT PROJECT */
 /* EDIT RECORD                                   */
+::placeholder.editrecord {
+  color: white; 
+}
 
 button:hover.editrecord {
   border: 2px solid green;
