--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+p {
+  padding-right: 4px
+}
+
 /* Set base font styles */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
