--- a/src/index.css
+++ b/src/index.css
@@ -290,8 +290,12 @@ table.editproject {
 }
 
 /* EDIT RECORD 'EDITRECORD' ELEMENT */
-.grid-container {
-  display: grid; 
+.flex-container {
+  display: flex; 
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 button:hover.editrecord {
