--- a/src/index.css
+++ b/src/index.css
@@ -292,6 +292,7 @@ table.editproject {
 /* EDIT RECORD 'EDITRECORD' ELEMENT */
 #elongated {
   width: 80%;
+  background-color: green;
 }
 
 .flex-container {
