--- a/src/index.css
+++ b/src/index.css
@@ -49,15 +49,13 @@ input {
 input[type="checkbox"] {
   appearance: none;
   background-color: #787878;
-  margin: 25px 25px 25px 0px;
   border-radius: 25px;
+  margin-left: 25px;
   border: 1px solid white;
   font: inherit;
   color: currentColor;
   width: 1.15em;
-  height: 1.15em;
-  border-radius: 0.15em;
-  
+  height: 1.15em;  
   display: grid;
   place-content: center;
 }
