Added Video to Project Website

--- a/project_website/style.css
+++ b/project_website/style.css
@@ -106,3 +106,8 @@
     align-items: center;
   }
   
+  .videoWrapper iframe {
+    margin: auto;
+    display: block;
+    text-align: center;
+  }
